39 test(core): add processor end-to-end integration test (#72)